// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsDialog renders with: {"expectedHelpUrl": "http://extension/help-relative", "helpUrl": "help-relative", "isDevToolsOpen": false} 1`] = `
<DocumentFragment>
  <mock-dialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
    title="help"
  >
    <div
      class="insights-dialog-content"
    >
      <section
        aria-labelledby="rule-name"
        class="insights-dialog-rule-name"
      >
        <h3
          id="rule-name"
        >
          Rule name
        </h3>
        <mock-newtablink
          href="http://extension/help-relative"
        >
          ruleId
        </mock-newtablink>
      </section>
      <section
        aria-labelledby="success-criteria"
        class="insights-dialog-success-criteria"
      >
        <h3
          id="success-criteria"
        >
          Success criterion
        </h3>
        <div>
          <mock-guidancelinks
            links="[object Object]"
          />
        </div>
      </section>
      <section
        class="insights-dialog-path-selector-container"
      >
        <h3>
          Path
        </h3>
        ruleId
      </section>
      <mock-commandbar
        currentruleindex="0"
        deps="[object Object]"
        devtoolsshortcut="shortcut"
        failedrules="[object Object]"
        hassecuretargetpage="true"
        shouldshowinsecureoriginpagemessage="false"
      />
      <div
        class="insights-dialog-fix-instruction-container"
      >
        <mock-fixinstructionpanel
          checks=""
          checktype="0"
          deps="[object Object]"
        />
        <mock-fixinstructionpanel
          checks=""
          checktype="1"
          deps="[object Object]"
        />
      </div>
      <mock-issuedetailsnavigationcontrols
        container="[object Object]"
        dialoghandler="[object Object]"
        failurescount="1"
      />
    </div>
  </mock-dialog>
</DocumentFragment>
`;

exports[`DetailsDialog renders with: {"expectedHelpUrl": "http://extension/help-relative", "helpUrl": "help-relative", "isDevToolsOpen": false}: verify close button 1`] = `<CancelIcon />`;

exports[`DetailsDialog renders with: {"isDevToolsOpen": false} 1`] = `
<DocumentFragment>
  <mock-dialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
    title="help"
  >
    <div
      class="insights-dialog-content"
    >
      <section
        aria-labelledby="rule-name"
        class="insights-dialog-rule-name"
      >
        <h3
          id="rule-name"
        >
          Rule name
        </h3>
        <mock-newtablink
          href="http://extension/help1"
        >
          ruleId
        </mock-newtablink>
      </section>
      <section
        aria-labelledby="success-criteria"
        class="insights-dialog-success-criteria"
      >
        <h3
          id="success-criteria"
        >
          Success criterion
        </h3>
        <div>
          <mock-guidancelinks
            links="[object Object]"
          />
        </div>
      </section>
      <section
        class="insights-dialog-path-selector-container"
      >
        <h3>
          Path
        </h3>
        ruleId
      </section>
      <mock-commandbar
        currentruleindex="0"
        deps="[object Object]"
        devtoolsshortcut="shortcut"
        failedrules="[object Object]"
        hassecuretargetpage="true"
        shouldshowinsecureoriginpagemessage="false"
      />
      <div
        class="insights-dialog-fix-instruction-container"
      >
        <mock-fixinstructionpanel
          checks=""
          checktype="0"
          deps="[object Object]"
        />
        <mock-fixinstructionpanel
          checks=""
          checktype="1"
          deps="[object Object]"
        />
      </div>
      <mock-issuedetailsnavigationcontrols
        container="[object Object]"
        dialoghandler="[object Object]"
        failurescount="1"
      />
    </div>
  </mock-dialog>
</DocumentFragment>
`;

exports[`DetailsDialog renders with: {"isDevToolsOpen": false}: verify close button 1`] = `<CancelIcon />`;

exports[`DetailsDialog renders with: {"isDevToolsOpen": true} 1`] = `
<DocumentFragment>
  <mock-dialog
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
    title="help"
  >
    <div
      class="insights-dialog-content"
    >
      <section
        aria-labelledby="rule-name"
        class="insights-dialog-rule-name"
      >
        <h3
          id="rule-name"
        >
          Rule name
        </h3>
        <mock-newtablink
          href="http://extension/help1"
        >
          ruleId
        </mock-newtablink>
      </section>
      <section
        aria-labelledby="success-criteria"
        class="insights-dialog-success-criteria"
      >
        <h3
          id="success-criteria"
        >
          Success criterion
        </h3>
        <div>
          <mock-guidancelinks
            links="[object Object]"
          />
        </div>
      </section>
      <section
        class="insights-dialog-path-selector-container"
      >
        <h3>
          Path
        </h3>
        ruleId
      </section>
      <mock-commandbar
        currentruleindex="0"
        deps="[object Object]"
        devtoolsshortcut="shortcut"
        failedrules="[object Object]"
        hassecuretargetpage="true"
        shouldshowinsecureoriginpagemessage="false"
      />
      <div
        class="insights-dialog-fix-instruction-container"
      >
        <mock-fixinstructionpanel
          checks=""
          checktype="0"
          deps="[object Object]"
        />
        <mock-fixinstructionpanel
          checks=""
          checktype="1"
          deps="[object Object]"
        />
      </div>
      <mock-issuedetailsnavigationcontrols
        container="[object Object]"
        dialoghandler="[object Object]"
        failurescount="1"
      />
    </div>
  </mock-dialog>
</DocumentFragment>
`;

exports[`DetailsDialog renders with: {"isDevToolsOpen": true}: verify close button 1`] = `<CancelIcon />`;
